add dex template

--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -288,6 +288,15 @@
         </span>
         <span class="ducatus-scan-button_text" translate>Swap</span>
       </button>
+      <button class="ducatus-scan-button" (click)="openDex()">
+        <span class="ducatus-scan-button_icon">
+          <img src="assets/img/tab-icons/tab-dex.svg" />
+        </span>
+        <span class="ducatus-scan-button_icon_active">
+          <img src="assets/img/tab-icons/tab-dex-active.svg" />
+        </span>
+        <span class="ducatus-scan-button_text" translate>Trade</span>
+      </button>
       <button class="ducatus-scan-button" (click)="openDeposits()">
         <span class="ducatus-scan-button_icon">
           <img src="assets/img/tab-icons/tab-deposits.svg" />
